[metadata]
name = motionphoto
version = 0.1.1
description = Python library for creating Google and Samsung compatible Motion Photos
long_description = file: README.md
long_description_content_type = text/markdown
keywords = livephoto, LivePhoto, motionphoto, MotionPhoto
url = https://github.com/doodspav/motionphoto
author = doodspav
autor_email = doodspav@gmail.com
license_file = LICENSE.txt
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
download_url = https://github.com/doodspav/motionphoto
project_urls =
    Source=https://github.com/doodspav/motionphoto

[options]
python_requires = >=3.8, <4
install_requires = file: requirements.txt

[options.entry_points]
console_scripts =
    motionphoto=motionphoto.cli:cli_file
